cephfs-mirror: do not run concurrent C_RestartMirroring context

Fixes: http://tracker.ceph.com/issues/62072
Signed-off-by: Venky Shankar <vshankar@redhat.com>
(cherry picked from commit b4d8f99c2aaef3b3dd74a4840c21dcb3ca9eb81a)